[package]
name = "wayvern"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", features = ["default", "wayland_frontend", "backend_egl", "use_system_lib"] }
input-linux = "0.6.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
log = "0.4.20"
tracing = { version = "0.1.37", features = [] }
profiling = "1.0.11"
thiserror = "1.0.49"

[build-dependencies]
bindgen = "0.68.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
