[package]
name = "wayvern"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/flutter_engine/embedder_sys", "src/flutter_engine/platform_channels",
    "third_party/smithay-drm-extras",
]

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", rev = "5e137dc", features = ["default", "wayland_frontend", "backend_egl", "use_system_lib", "backend_vulkan"] }
smithay-drm-extras = { path = "third_party/smithay-drm-extras" }
rustix = "0.38.39"
input-linux = "0.7.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.22"
tracing = { version = "0.1.40", features = [] }
profiling = "1.0.16"
thiserror = "2.0.0"
xcursor = "0.3.8"
serde = "1.0.214"
serde_json = "1.0.132"
lazy_static = { version = "1.5.0", features = [] }

embedder_sys = { path = "src/flutter_engine/embedder_sys" }
platform_channels = { path = "src/flutter_engine/platform_channels" }

[build-dependencies]
bindgen = "0.70.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
